--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
         <tr>
             <td>Calça Jeans</td>
             <td>Vermelha</td>
-            <td>P</td>
+            <td>G</td>
             <td>R$160,00</td>
-            <td>Esgotado</td>
+            <td>Disponível</td>
         </tr>
     </table>
 </body>
